<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.sfeirapp.app.AjouterMonumentActivity"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/formTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <EditText
        android:id="@+id/titreMonumentEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titreMonumentEditHint"
        />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/formLieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/lieuMonumentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lieuMonumentEditHint"
            />
    </TableRow>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/formDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/descMonumentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descMonumentEditHint"

            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/submitMonument"
            android:text="@string/enregitrerMonument"
            android:onClick="enregistrerMonumentClick"/>

    </TableRow>

</LinearLayout>
