<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageMonument"
        android:src="@drawable/ic_piramid_48"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/titreMonument"
        android:text="@string/monument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageMonument"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>


    <TextView
        android:id="@+id/lieuMonument"
        android:text="@string/lieuMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/titreMonument"/>

        <TextView
            android:id="@+id/descMonument"
            android:text="@string/descMonument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageMonument"
            android:layout_alignLeft="@id/titreMonument"
            />


</RelativeLayout>
